SHS-4652: Bug: hb-raised-cards utility classes are affecting Vertical Linked Cad styling (#1278)
* SHS-4648: Fix image captions in events teasers covering event date (#1273)

* hotfix: Mobile mega menu doesn't open on non-active trail pages (#1271)

* 9.4.11

* fix: image captions in events teasers covering event date

* fix: caption padding should also account for date badge

---------


* feat: add transparent background to cards if hb-stretch utility class is not present

* fix: conflicts with raised cards, uniform-height, and stretch-linked classes

* SHS-148: Add image optimize and image optimize binaries (#1263)

* feat(SHS-148): Add image optimize and image optimize binaries

* feat(SHS-148): Add Image Optimize reSmush.it

* feat: configure image optimize modules for 75% quality

* feat: enable optimization module

---------


* chore: revert quote formatting from ide

* chore: revert quote formatting from ide

* chore: revert quote formatting from ide

* chore: revert vertical linked card js

* chore: fix merge conflict issue

* fix: only equalize cards within the same collection

* feat: remove height 100% on only hb-raised-card class

---------

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_card.scss
@@ -326,6 +326,7 @@
       padding: hb-calculate-rems(12px) hb-calculate-rems(10px) hb-calculate-rems(8px);
       bottom: hb-calculate-rems(18px);
       left: hb-calculate-rems(-10px);
+      z-index: 5;
 
       @include grid-media-min('sm') {
         bottom: hb-calculate-rems(22px);
